option java_package = "org.gameprototype.proto.src";

message PlayerRoleDTOPB {
    required int64 playerRoleId = 1;
}